@@ -6,7 +6,7 @@
 #define FRIBBLER_H
 
 #define FRIBBLER_DEBUG 1
-#define FRIBBLER_CYCLE 10000 // 1000000/100 == 0.01 seconds
+#define FRIBBLER_CYCLE 1000 // 1000000/1000 == 0.001 seconds
 
 #include "libplayercore/playercore.h"
 #include "Scribbler/scribbler.h"
