@@ -1,6 +1,7 @@
 #include <iostream>
 #include <libplayerc++/playerc++.h>
 #include <unistd.h>
+#include <ctime>
 using namespace std;
 using namespace PlayerCc;
 
@@ -8,11 +9,16 @@ int main(int argc, char **argv)
 {
 	PlayerClient    robot;
 	Position2dProxy pp(&robot, 0);
-	//pp.ResetOdometry();
-	//pp.RequestGeom();
-	pp.SetSpeed(40, 0);
 
-	while (1) {
+	// timing
+	double framerate = 0.0;
+	double tTotal    = 0.31;
+	double tElapsed  = 0.0;
+
+	pp.SetSpeed(100, 1);
+
+	while (tElapsed <= tTotal) {
+		time_t t0 = time(0); // time the frame
 		robot.Read(); // Read from proxies
 
 		// Test to see which methods generate which messages:
@@ -27,7 +33,13 @@ int main(int argc, char **argv)
 		pp.SetSpeed(100, 0);
 		cout << "speed: " << pp.GetXSpeed() << "   pos: " << pp.GetXPos() << endl;
 */
+
+		framerate = difftime(time(0), t0); // time the frame
+		tElapsed += framerate;
 	}
+
+	pp.SetSpeed(0,0);
+	sleep(1);
 
 	return 0;
 }
